# StemSplit1

./: .env  .env.local.example  .gitattributes  .gitignore  .opencode.json  AGENTS.md  BUILD_MAC.md  BUILD_MAC_WITHOUT_MAC.md  BUILD_STATUS_v0.4.2.md  DEBUG_BUILD.md  FAIL_PROOF_INSTALLER_IMPLEMENTATION.md  FIRST_LAUNCH_TEST_PLAN.md  GITHUB_RELEASE_BODY_v1.0-next16-security-upgrade.md  GITHUB_RELEASE_BODY_v1.0-phase03.md  INSTALLATION_MAC.md  LICENSE_GUARD_README.md  MAC_INSTALLER_QUICK_REF.md  PHASE_03_COMPLETE_SUMMARY.md  PHASE_03_DOCUMENTATION_INDEX.md  PHASE_03_INTEGRATION_TEST_RESULTS.md  PHASE_03_QUICK_START.md  PHASE_03_RELEASE_READY.md  PHASE_04_QUALITY_AND_YOUTUBE_ENHANCEMENTS.md  PLATFORM_COMPARISON.md  PRO_FX_STATUS.md  PR_NEXT16_SECURITY_UPGRADE.md  PURITY_OPTIMIZATION.md  QUICK_START_GITHUB.md  README_DOWNLOAD.md  RELEASE_NOTES_v0.4.1_PILLAR_1A.md  RELEASE_NOTES_v0.4.2_PILLARS_2_3.md  RELEASE_NOTES_v1.0-phase03-fail-proof-installer.md  RELEASE_READINESS_CHECKLIST.md  RUNTIME_MARKER_DEBUG_GUIDE.md  SECURITY_TRIAGE_2026-04-04.md  SOUND_INSTRUCTIONS.md  TAURI_V2_SECURITY_UPGRADE_PLAN.md  Untitled-1.ipynb  VST_INTEGRATION.md  all_filelist.txt  (+33 more)
.github/: dependabot.yml  instructions.md
.github/workflows/: billing-preflight.yml  build-mac.yml  build-macos-minimal.yml  build-macos.yml  installer-macos.yml  installer-windows.yml  macos-release-signed-notarized.yml  quality-gates.yml  windows-release-signed.yml
.opencode/commands/: add-feature.md  list-tasks.md  refactor-module.md  summarize-project.md
.opencode/gui/: agent-gui-design.md
VST3_Project/: CMakeLists.txt  README.md
VST3_Project/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VST3_Project/Source/DSP/: FXChain.h  Parameters.h
VST3_Project/Source/UI/: FXModuleComponent.h  GateModule.h  PremiumLookAndFeel.h
billing-service/: README.md  server.mjs  webhook-smoke.mjs
billing-service/data/: licenses.json
ci_artifacts/StemSplit-Installer-Windows-Online/: checksums-windows.sha256  model-payload-report.json  model-payload-report.md  quality-gate-windows.json  quality-gate-windows.md  release-manifest-windows.json  smoke-windows.json
coilot/: AUDIO_AGENT_EXECUTION_PLAN.md  COMMAND_PALETTE_AND_AUDIO_TOOLS_MOCKUP.md  README.md  VALUE_FEATURES.md  index.html  package-lock.json  package.json  tailwind.config.js
coilot/src/: App.tsx  agentWorkflows.ts  aiEndpoints.ts  lmstudioApi.ts  ollamaApi.ts
docs/: AUTH_BILLING_SETUP.md  CODE_SIGNING_MACOS.md  CODE_SIGNING_WINDOWS.md  INSTALLER_90_PLUS_AND_PRODUCT_100_PLAN.md  INSTALLER_QUALITY_GATE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_RUNBOOK.md  SECURITY_ALERTS.md  installer_upgrade_plan_to_90.md  ratings_report_2026-03-25.md  tauri_implementation.md
olama-gedn/: README.md  engine-classic.html  engine-clean-slow.html  engine-granular-drift.html  engine-rubber-drag.html  engine-stretch-haze.html  landing.html  temporal.html
olama-gedn/vst3-temporal/: CMakeLists.txt  README.md  build.ps1
olama-gedn/vst3-temporal/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
olama-gedn/vst3-temporal/assets/: rubberband-worker.js  soundtouch-worklet.js
olama-gedn/vst3-temporal/docs/: ARCHITECTURE.md  BUILD_AND_INSTALL.md  CONTEXT_MAP.md  CONVERSION_SCOPE.md
olama-gedn/vst3-temporal/installer/: TemporalPortalPlugin.iss  build-installer.ps1
olama-gedn/vst3-temporal/tests/: engine-signature-smoke.js
old_unused/: build_installer_complete.ps1  build_online_installer.ps1
public/: landing_page.html
scripts/: apply_fx.py  hardware.py  license_generator.py  pack_runtime.ps1  pre_split_processor.py  preview_vst.py  publish_release.ps1  setup_python_env.ps1  sign_windows_release.ps1  splitter.py  test_all_fx.py  test_fx.py  test_restoration.py  verify_loudness.py  verify_loudness_2.py  verify_loudness_3.py  whisper_transcribe.py  youtube_dl.py
scripts/ci/: generate_release_manifest.py  installer_quality_gate.py  model_payload_manifest.json  release_preflight.py  smoke_test_installer.ps1  smoke_test_mac_installer.sh  validate_model_payloads.py
src-tauri/: Cargo.toml  entitlements.plist  generate_icons.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  hardware.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/license/validate/: route.ts
src/components/: 1_StemSplit.code-workspace  LicenseModal.tsx  OriginalPlayer.tsx  PythonSetup.tsx  ReactorZone.tsx  SalesModal.tsx  StemFXMenu.tsx  StemPlayer.tsx  TitleBar.tsx  UpdateModal.tsx  WebGLVisualizer.tsx
src/contexts/: LicenseContext.tsx
src/hooks/: useSound.tsx  useStemSplit.tsx
src/lib/: tauri-bridge.ts
tmp_mac_compare/: checksums-mac.sha256  model-payload-report.json  model-payload-report.md  quality-gate-macos.json  quality-gate-macos.md  release-manifest-macos.json  smoke-macos.json
