[package]
name = "stem-split"
version = "0.1.0"
description = "Professional audio stem splitter with AI-powered separation"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.7", features = ["protocol-asset", "window-all", "dialog-save", "fs-all", "dialog-open", "shell-open"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dev-dependencies]
mockito = "0.31"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
