[package]
name = "stem-split"
version = "0.4.2"
description = "Professional audio stem splitter with AI-powered separation"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls", "stream"] }
zip = "0.6"

# License validation - Gumroad API
sha2 = "0.10"
hmac = "0.12"
dirs = "6.0"
sysinfo = "0.30.13"
futures-util = "0.3.31"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
mockito = "0.31"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
